# TyreDyn

./: .gitignore  LICENSE  README.md  pyproject.toml
example_tyres/: Bus_270_70R22.tir  car205_60R19.tir  car235_50R24.tir
examples/: free_rolling.ipynb
notebooks/: draft_tyre.ipynb  loaded_radius_test.ipynb  test_tyre.ipynb
notebooks_private/: test_tyre.ipynb
src/: __init__.py  initialize_tyre.py
src/TyreDyn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/base/: base_tyre.py  magic_formula_61.py  magic_formula_61_new.py
src/helpers/: common_mf61.py  common_mf6x.py  corrections.py  corrections_mf6x.py  normalize.py
src/models/: base_tyre.py  magic_formula_61.py
src/modules/contact_patch/: contact_patch_mf61.py  contact_patch_mf6x.py
src/modules/forces/: forces_mf61.py  forces_mf6x.py
src/modules/friction_coefficient/: friction_mf61.py  friction_mf6x.py
src/modules/gradients/: gradients_mf61.py  gradients_mf6x.py
src/modules/moments/: moments_mf61.py  moments_mf6x.py
src/modules/radius_and_deflection/: radius_mf61.py  radius_mf62.py
src/modules/relaxation/: relaxation_mf61.py  relaxation_mf6x.py
src/old_files/: magic_formula_61_old.py
src/tyre_models/: base_tyre.py  magic_formula_61.py  magic_formula_62.py  magic_formula_6x.py
src/tyredyn/: __init__.py
src/utils/: formatting.py  initialize_tyre.py  misc.py  model_map.py  paths.py  plotting.py  read_file.py  temp.py  tir_validation.py
tests_private/: quick_test.py  quicktest.py
tests_private/comparison/: mfeval_test.m  tno_cpi.slx
tyres_example/: car145_70R13.tir
(+41 files in other folders)
